# llm-serving-benchmark

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
analysis/: notebook.ipynb  pyproject.toml
analysis/analysis/: extract.py
server/cpp-llamacpp/: README.md
server/cpp-llamafile/: README.md
server/go-ollama/: README.md
server/py-huggingface/: README.md  main.py  pyproject.toml
server/rs-candle/: Cargo.toml  README.md
server/rs-candle/src/: candle_server_utils.rs  main.rs  token_output_stream.rs
server/rs-mistralrs/: README.md
tests/: cpp-llamacpp.sh  cpp-llamafile.sh  go-ollama.sh  py-huggingface.sh  rs-mistralrs.sh
tests/hurl/: cpp-llamafile.hurl  go-ollama.hurl  py-huggingface.hurl  rs-mistralrs.hurl
