[project]
name = "py-huggingface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.0",
    "fastapi>=0.115.0",
    "pydantic>=2.9.2",
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "uvicorn>=0.31.0",
]
