[package]
name = "rs-candle"
version = "0.1.0"
edition = "2021"

[dependencies]
accelerate-src = "0.3.2"
anyhow = "1.0.89"
candle-core ={version = "0.7.2", features=["metal"]}
candle-metal = "0.27.1"
candle-nn ={version= "0.7.2", features=["metal"]}
candle-transformers ={version= "0.7.2", features=["metal"]}
clap = { version = "4.5.17", features = ["derive"] }
hf-hub = "0.3.2"
serde_json = "1.0.128"
tokenizers = "0.20.0"
tracing-subscriber = "0.3.18"
